allowed to have no password and create gamedata dir if not existing

--- a/etcminetest/datenspuren.conf
+++ b/etcminetest/datenspuren.conf
@@ -1107,7 +1107,7 @@ fixed_map_seed =99995594395634257685432
 
 #    New users need to input this password.
 #    type: string
-default_password = ds2017
+#default_password = ds2017
 
 #    The privileges that new users automatically get.
 #    See /privs in game for a full list on your server and mod configuration.
@@ -1141,7 +1141,7 @@ enable_pvp = false
 
 #    If enabled, new players cannot join with an empty password.
 #    type: bool
-disallow_empty_password = true
+disallow_empty_password = false
 
 #    If enabled, disable cheat prevention in multiplayer.
 #    type: bool
